<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    android:padding="10dp" >

    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/new_note"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notes"
        android:ems="10"
        android:hint="@string/hint_add_title"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/addContent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnSave"
        android:layout_below="@+id/addTitle"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_add_content"
        android:inputType="textMultiLine"
        android:textColor="@color/TextIcon" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/add"
        android:text="@string/save"
        android:textColor="@color/TextIcon" />

</RelativeLayout>