<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    android:padding="10dp" >

    <EditText
        android:id="@+id/detailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toStartOf="@+id/btnMail"
        android:gravity="center"
        android:inputType="text"
        android:labelFor="@+id/detailTitle"
        android:padding="5dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/contentDescription"
        android:src="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/detailContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEditSave"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/detailTitle"
        android:layout_margin="5dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:labelFor="@+id/detailContent"
        android:padding="5dp"
        android:text="@string/content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon" />

    <Button
        android:id="@+id/btnEditSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDelete"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/add"
        android:text="@string/save"
        android:textColor="@color/TextIcon"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/delete"
        android:text="@string/delete"
        android:textColor="@color/TextIcon" />

</RelativeLayout>